# roboe

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  musical.cpp  musical.h  oboe.c  oboe.cpp  oboe.h  roboe.h  roboe.ino
cmake/Platform/: Arduino.cmake
device/: README.md  roboe.blend  roboe_bottom.stl  roboe_mouthpiece.blend  roboe_mouthpiece.stl  roboe_mouthpiece_0.3mm_PLA_MK3S_47m.gcode  roboe_top.stl
device/roboe_pcb/: roboe_pcb-cache.lib  roboe_pcb.sch
src/: lib.rs  main.rs
src/input/: web.rs
src/music/: mod.rs  note.rs
src/oboe/: fingering.rs  key.rs  mod.rs
web/: .eslintrc.js  package.json  vue.config.js
web/public/: index.html
web/src/: main.ts
web/src/components/: HelloWorld.vue
web/src/oboe/: fingering.ts  input.ts  music.ts  sound.ts
web/src/router/: index.ts
web/src/views/: Oboe.vue
